--- a/index.html
+++ b/index.html
@@ -19,13 +19,47 @@
             <div class="thirteen wide column">
               <div class="stackable grid">
                 <div class="sixteen wide column">
-                  <!-- Name, job, contacts -->
+                  <h1>Elon Musk</h1>
+                  <div class="job">Co-founder and CEO at Tesla</div>
+                  <ul class="contacts">
+                    <li>
+                      <a href="https://www.facebook.com/pages/category/Public-Figure/Elon-Musk-19958149870/" rel="autor" class="facebook">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"/>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://twitter.com/elonmusk" rel="autor" class="twitter">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.5 8.778c-.441.196-.916.328-1.414.388.509-.305.898-.787 1.083-1.362-.476.282-1.003.487-1.564.597-.448-.479-1.089-.778-1.796-.778-1.59 0-2.758 1.483-2.399 3.023-2.045-.103-3.86-1.083-5.074-2.572-.645 1.106-.334 2.554.762 3.287-.403-.013-.782-.124-1.114-.308-.027 1.14.791 2.207 1.975 2.445-.346.094-.726.116-1.112.042.313.978 1.224 1.689 2.3 1.709-1.037.812-2.34 1.175-3.647 1.021 1.09.699 2.383 1.106 3.773 1.106 4.572 0 7.154-3.861 6.998-7.324.482-.346.899-.78 1.229-1.274z"/>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/elonmusk/" rel="autor" class="instagram">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.tesla.com/elon-musk" rel="author" class="tesla-motors">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21.739 10.921c-1.347-.39-1.885-.538-3.552-.921 0 0-2.379-2.359-2.832-2.816-.568-.572-1.043-1.184-2.949-1.184h-7.894c-.511 0-.736.547-.07 1-.742.602-1.619 1.38-2.258 2.027-1.435 1.455-2.184 2.385-2.184 4.255 0 1.76 1.042 3.718 3.174 3.718h.01c.413 1.162 1.512 2 2.816 2 1.304 0 2.403-.838 2.816-2h6.367c.413 1.162 1.512 2 2.816 2s2.403-.838 2.816-2h.685c1.994 0 2.5-1.776 2.5-3.165 0-2.041-1.123-2.584-2.261-2.914zm-15.739 6.279c-.662 0-1.2-.538-1.2-1.2s.538-1.2 1.2-1.2 1.2.538 1.2 1.2-.538 1.2-1.2 1.2zm3.576-6.2c-1.071 0-3.5-.106-5.219-.75.578-.75.998-1.222 1.27-1.536.318-.368.873-.714 1.561-.714h2.388v3zm1-3h1.835c.882 0 1.428.493 2.022 1.105.452.466 1.732 1.895 1.732 1.895h-5.588v-3zm7.424 9.2c-.662 0-1.2-.538-1.2-1.2s.538-1.2 1.2-1.2 1.2.538 1.2 1.2-.538 1.2-1.2 1.2z"/>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.spacex.com/" rel="author" class="spacex">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10.149 7.381c-1.482-.008-3.343.795-4.763 2.214-.541.541-1.019 1.173-1.386 1.882 1.281-.969 2.647-1.273 4.247-.375.471-1.245 1.099-2.512 1.902-3.721zm8.477 8.461c-1.313.858-2.604 1.478-3.723 1.914.897 1.6.594 2.964-.376 4.244.712-.367 1.343-.844 1.884-1.386 1.425-1.423 2.229-3.288 2.215-4.772zm5.329-13.805c-.357-.025-.707-.037-1.051-.037-7.451 0-11.692 5.678-13.235 10.245l4.095 4.094c4.702-1.685 10.236-5.767 10.236-13.136 0-.38-.015-.768-.045-1.166zm-8.565 8.579c-.339-.338-.339-.886 0-1.224.338-.338.886-.338 1.224 0 .339.338.339.886 0 1.224-.339.339-.886.339-1.224 0zm2.449-2.448c-.677-.676-.677-1.772 0-2.449s1.773-.676 2.449 0c.677.676.677 1.772 0 2.449-.676.676-1.772.676-2.449 0zm-6.089 8.723c-1.469 1.797-3.812 3.084-6.126 3.084-3.2 0-5.624-2.354-5.624-5.311 0-1.485.611-3.122 2.043-4.689-3.201 5.137 1.532 9.831 7.101 4.31l.765.765c-.91 1.061-1.84 1.8-3.149 2.461 1.344.057 3.049-.568 4.195-1.416l.795.796z"/>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
                 <div class="sixteen wide mobile only column">
                   <div class="divider"></div>
                 </div>
                 <div class="sixteen wide column">
-                  <!-- Intro -->
+                  <h2>Résumé</h2>
+                  <p>I am the most popular tech innovator in the world. I am more popular than Nikola Tesla and even Leonardo Da Vinci in thousand times. I invent really cool things. Nobody is more successful than me. My inventions are dreamed by everyone in the world. Nevertheless, My Tesla mobile is really pretty and fast, it`s safe for our planet and is a big step in future, and I love creating such innovative things. I am an amazingly cool man, yeap!</p>
                 </div>
               </div>
             </div>
