--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>Résumé</title>
   <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -14,7 +15,9 @@
         <div class="stackable grid">
           <div class="row">
             <div class="three wide center aligned column">
-              <!-- Avatar -->
+              <div class="avatar-wrapper">
+                <img class="avatar" src="https://illustrators.ru/uploads/illustration/image/1134350/main_%D0%92%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D1%8B%D0%B9_%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82_%D0%98%D0%BB%D0%BE%D0%BD_%D0%9C%D0%B0%D1%81%D0%BA.jpg" alt="My avatar">
+              </div>
             </div>
             <div class="thirteen wide column">
               <div class="stackable grid">
